--- a/demo-laravel/composer.json
+++ b/demo-laravel/composer.json
@@ -28,10 +28,12 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Configurations"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Danvelcab\\ProjectGenerator\\": "vendor/ebarriosbloonde/LaravelAbstractClass/src"
         }
     },
     "autoload-dev": {
