--- a/demo-laravel/public/.htaccess
+++ b/demo-laravel/public/.htaccess
@@ -1,3 +1,8 @@
+Header always set Access-Control-Allow-Origin '*'
+#Header always set Access-Control-Allow-Credentials "true"
+Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
+Header always set Access-Control-Max-Age "1000"
+Header always set Access-Control-Allow-Headers "Access-Control-Allow-Origin, Access-Control-Allow-Credentials, cache-control, x-requested-with, Content-Type, origin, authorization, accept, client-security-token, X-XSRF-TOKEN"
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
