--- a/demo-angular/angular.json
+++ b/demo-angular/angular.json
@@ -26,7 +26,9 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/noty/lib/noty.js"
+              "node_modules/noty/lib/noty.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
