--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "@ng-select/ng-select": "^2.7.0",
     "@ngx-translate/core": "^10.0.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "ngx-pagination": "^3.2.0",
     "noty": "^3.1.2",
