--- a/demo-angular/angular.json
+++ b/demo-angular/angular.json
@@ -128,6 +128,46 @@
           }
         }
       }
+    },
+    "ng-template": {
+      "root": "projects/ng-template",
+      "sourceRoot": "projects/ng-template/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ng-template/tsconfig.lib.json",
+            "project": "projects/ng-template/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/ng-template/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ng-template/src/test.ts",
+            "tsConfig": "projects/ng-template/tsconfig.spec.json",
+            "karmaConfig": "projects/ng-template/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ng-template/tsconfig.lib.json",
+              "projects/ng-template/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "demo-angular"
