--- a/demo-angular/tsconfig.json
+++ b/demo-angular/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ng-template": [
+        "dist/ng-template"
+      ],
+      "ng-template/*": [
+        "dist/ng-template/*"
+      ]
+    }
   }
 }
